--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculators</title>
-    <link rel="stylesheet" href="Calci.css">
+    <link rel="stylesheet" href="calci.css">
     <link rel="stylesheet" type="text/css"
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head> 
@@ -64,6 +64,6 @@
         </div>
      
     <h2>Divya  <span>Mishra</span><br>Delhi <br> <i style="font-size: 100px;"></i></h2>
-     <script src="Main.js"></script>  
+     <script src="script.js"></script>  
 </body>
 </html>
